--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <title>404 Page</title>
   </head>
   <body>
-
+    <!-- HEADER -->
     <header>
       <h2>404 NOT FOUND</h2>
     </header>
+
+    <!-- CONTENT -->
     <section id="content">
       <div class="left-box">
         <img src="./img/Scarecrow.png" alt="Scarecrow image" />
@@ -31,6 +33,8 @@
         <div class="btn"><a href="#"">BACK TO HOMEPAGE</a></div>
       </div>
     </section>
+    
+    <!-- FOOTER -->
     <footer>
       <p>ragul@DevChallenges.io</p>
     </footer>
